# sistema_comercio

./: .gitignore  CAMBIOS_REALIZADOS.md  FIX_ITEM_SCHEMA.md  README.md  create_excel_files.py  database_optimization_update.sql  database_optimization_update_corrected.sql  docker-compose.yml  fix_tiposrecurso_simple.sql  package-lock.json  package.json  personal.xlsx  personal_limpio.csv  recursos_ingenieria.xlsx  recursos_instrumentos.xlsx  recursos_valvulas.xlsx  reinstalar_rust.ps1  verify_database_structure.sql  verify_database_update.sql
backend/: Dockerfile  check_admin_user.sql  fix_admin_user.sql  migration_incrementos.sql  migration_new_structure.sql  requirements.txt  reset_database.sql
backend/app/: main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: models.py  models_catalogs.py  models_quotes.py  session.py
backend/app/routers/: auth.py  catalogs.py  configuracion.py  costos.py  equipos.py  health.py  itemsObra.py  materiales.py  mesesJornada.py  obras.py  obras_optimized.py  personal.py  quotes.py  recursos.py  roles.py  usuarios.py
backend/app/schemas/: auth.py  catalogs.py  costos.py  equipos.py  itemsObra.py  materiales.py  mesesJornada.py  obras.py  obras_optimized.py  personal.py  quotes.py  recursos.py  users.py
backend/sql/: insert_recursos.sql
database/: schema.sql  verify_structure.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Layout.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
(+240 files in other folders)
