[package]
name = "sistema-comercio-frontend"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "http-all", "fs-remove-dir", "fs-exists", "fs-write-file", "fs-create-dir", "fs-rename-file", "fs-read-dir", "fs-copy-file", "fs-remove-file", "dialog-open", "dialog-save", "fs-read-file", "shell-open"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


